<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/meme_app"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#7C64A8"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_margin="15dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_manar_tarek"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_21"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major_android_development"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/a"
        android:scaleType="fitXY"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:contentDescription="@string/meme_photo"
        android:src="@drawable/b"
        android:scaleType="fitXY"
        />

</LinearLayout>